change tags many-to-many and adding advanced queries(top k, find with name-descr-tags-snippe)